# LiDAR_modelling

./: .gitignore  README.md  data_augmentation.py  main.py  model.py  pyproject.toml  requirements.txt  utils.py
data/synthetic_data/: lidar_cable_points_easy_180.parquet  lidar_cable_points_easy_90acw.parquet  lidar_cable_points_easy_90cw.parquet  lidar_cable_points_extrahard_180.parquet  lidar_cable_points_extrahard_90acw.parquet  lidar_cable_points_extrahard_90cw.parquet  lidar_cable_points_hard_180.parquet  lidar_cable_points_hard_90acw.parquet  lidar_cable_points_hard_90cw.parquet  lidar_cable_points_medium_180.parquet  lidar_cable_points_medium_90acw.parquet  lidar_cable_points_medium_90cw.parquet
src/lidar_cable_clustering/: data_augmentation.py  main.py  model.py  utils.py
src/lidar_cable_clustering.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
