[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lidar-cable-clustering"
version = "0.1.0"
description = "Clustering of LiDAR cable points to estimate the number of cables in a dataset"
authors = [
    { name = "William Shirley" }
]
dependencies = [
    "numpy >=2.4.3",
    "pandas >=3.0.1",
    "matplotlib >= 3.10.8",
    "scikit-learn >= 1.8.0",
    "scipy >= 1.17.1",
]
